--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 					<applicationName>cicd-demo</applicationName>
 					<environment>Sandbox</environment>
 					<workers>1</worker>
-					<worker>1</workers>
+					<worker>1</worker>
 					<workerType>Micro</workerType>
 					<worker>1</worker>
 					<ojbectstoreV2>true</ojbectstoreV2>
