--- a/pom.xml
+++ b/pom.xml
@@ -27,17 +27,19 @@
 				<extensions>true</extensions>
 				<configuration>
 				<cloudHubDeployment>
-			      <muleVersion>4.4.0</muleVersion>
-			      <username>nareshy2</username>
-			      <password>Laahi123!</password>
-			      <applicationName>mule-maven-project-tutorial</applicationName>
-			      <environment>Sandbox</environment>   
-			      <workers>1</workers>
-			      <workerType>MICRO</workerType>
-			      <properties>
-				    <maven.compiler.target>1.8</maven.compiler.target>
-				    <maven.compiler.source>1.8</maven.compiler.source>
-				</properties>
+				      <muleVersion>4.4.0</muleVersion>
+				      <uri>https://anypoint.mulesoft.com</uri>
+				      <username>nareshy2</username>
+				      <password>Laahi123!</password>
+				      <applicationName>test</applicationName>
+				      <environment>Sandbox</environment>   
+				      <workers>1</workers>
+				      <workerType>MICRO</workerType>
+				      <objectStoreV2>true</objectStoreV2>
+				      <properties>
+					    <maven.compiler.target>1.8</maven.compiler.target>
+					    <maven.compiler.source>1.8</maven.compiler.source>
+				      </properties>
 			    </cloudHubDeployment>
 				</configuration>
 			</plugin>
